fix(tags): optimize tags wrapping logic

--- a/assets/css/_partial/_single/_footer.scss
+++ b/assets/css/_partial/_single/_footer.scss
@@ -58,7 +58,6 @@
   }
 
   .post-tags {
-    max-width: 65%;
     margin-right: .75rem;
     display: inline-block;
 
@@ -69,6 +68,10 @@
     i {
       margin-right: .2rem;
     }
+  }
+
+  .post-back {
+    white-space: nowrap;
   }
 
   .post-nav {
